# fyos

./: Cargo.toml  README.md
.bk/: konsole.rs  vga_buffer.rs
src/: bit_field.rs  gdt.rs  interrupts.rs  konsole.rs  lazy_static.rs  lib.rs  main.rs  pic.rs  port.rs  screen.rs  serial.rs  spinlock.rs  sync.rs  x86_64.rs
src/interrupts/: idt.rs
tests/: basic_boot.rs  should_panic.rs  stack_overflow.rs  stackoverflow.rs
