[package]
name = "fyos"
authors = ["fy"]
version = "0.1.0"
edition = "2021"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none",
]
# (0x10 << 1) | 1
test-success-exit-code = 33 
test-timeout = 10

[dependencies]
bootloader = "0.9.8"
uart_16550 = "0.2.0"

[[test]]
name = "should_panic"
harness = false
